first test commit to headline

--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,8 @@
-<head>
-  <title>box</title>
-</head>
-
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
-  {{> info}}
-</body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
+<!DOCTYPE html>
+<html>
+      <head>
+            <title>I love my boyfriend he knows how to pull me to his side, he's very committed, that's why I'll never push him away, because he is the master of love.
+            <span style="color:#0000FF">
+            </title>
+      </head>
+</html>
